# tilde_market

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
market/: __main__.py  companies.py  db.py  mail.py  players.py  settings.py  stocks.py  userconfig.py
market/sql/: createdb.sql
market/templates/email/: company_json_error.json  user_config_json_error.json
market/tests/: test_companies.py  test_players.py  test_stocks.py  test_userconfig.py  utils.py
market/tests/testdata/baduser/: company.json
market/tests/testdata/baduser/.market/: company.json  config.json  orders.csv
market/tests/testdata/invaliduser1/.market/: config.json
market/tests/testdata/invaliduser3/.market/: config.json
market/tests/testdata/invaliduser4/.market/: config.json
market/tests/testdata/newuser/: company.json
market/tests/testdata/newuser/.market/: config.json
market/tests/testdata/usera/.market/: config.json
market/tests/testdata/userb/.market/: config.json
market/tests/testdata/userc/.market/: config.json
