[tool.poetry]
name = "tilde_market"
version = "0.1.0"
description = "A stock trading game for tilde."
authors = ["Scott Rubin <apreche@frontrowcrew.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
ipython = "^7.18.1"
ipdb = "^0.13.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
